*Empty MediaWiki Message*

--- a/Ysland-baskisk.mw
+++ b/Ysland-baskisk.mw
@@ -28,5 +28,86 @@ Der wörd ouk verweysen når ne darde wöördelyste. In nen breev nöömt den ys
 === De veerde wöördelyste ===
 In de bibliotheek van de [[Universiteit van Harvard]] wör noch ne veerde ysland-baskiske wöördelyste vünden. Den was versameld döär den düütsken geskydkündigen [[Konrad von Maurer]] doo as hee in [[1858]] up besöök was in Ysland. Et manuskript stamt uut et eande van de 18. eywe of de vroge 19. eywe. De lyste wör pas in [[2008]] vünden. Den oorsprunkeliken besitter har nit enöömd dat der baskisk in vöär köäm.<ref>[https://web.archive.org/web/20120505121657/http://www.euskosare.org/komunitateak/ikertzaileak/ehmg/7/viola_miglio_and_ricardo_etxepare_-_a Belluzzo, Nicholas (2007). ''Viola Miglio and Ricardo Etxepare. - "A new Basque - Icelandic glossary of the 17th Century.'']</ref> Up mär twey van de bladsyden ståt ysland-baskiske wöörde. De rest is unverwante saken as uutleg oaver [[goocheltrucs]] en et uutspreaken van leevdesbesweyringen. Et is düdelik dat den oaverskryver gin idey har dat et baskisk was, ümdat de titel is "een paar latynske wöörde." Vöäle van de upsummingen sint verkeyrd en et lykt et wark van ymand den as nit gewoon is te skryven. Een grout deyl van de wöörde koamet nit vöär in Deen syne lyste, vandår at emeynd wördt dat et ne kopy is van een unbekend ysland-baskisk oaversicht. Der ståt in totaal ungeveyr 68 wöörde en sinnen in.
 
+==Mengspråk-sinnen==
+In et handskrivt ''Vocabula Biscaica'' ståt de volgende sinnen med een mengspråkelement:
+{| class="wikitable"
+!Basiske wöördelyste
+!Modern baskisk<ref>Van de [[:eu:Euskara-islandiera pidgina|baskiske]] en de [[:fr:Basco-islandais|franske Wikipedia's]].</ref><span style="font-weight:normal"></span>
+!Yslandske wöördelyste
+!Neadersassiske ümsetting{{info|baseerd up de yslandske tekst, den as mangs wat van et baskisk afwikt.}}
+!Woordnummer
+|-
+|''presenta for mi''||Emadazu||''giefdu mier''||Geavt my
+|<small>193 & 225</small>
+|-
+|''bocata for mi attora''||Garbitu iezadazu atorra||''þvodu fyrer mig skyrtu''||wasket vöär my et skort
+|<small>196</small>
+|-
+|''fenicha for ju''||Izorra hadi!||''liggia þig''||Val dood!{{info|De sinnen ''fenicha for ju - liggia þig'' hef Deen nit oaversat in et spaansk of düütsk in syn proovskrivt. Hee makeden der ''cum te coire'' 'vryen med u' in Latyn. Mär Miglio vindet et wårskynliker dat et nen vlook was.}}
+|<small>209</small>
+|-
+|''presenta for mi locaria''||Emazkidazu lokarriak||''giefdu mier socka bond''||Geavet my den sokkenband
+|<small>216</small>
+|-
+|''ser ju presenta for mi''||Zer emango didazu?||''hvad gefur þu mier''||Wat geav y my?
+|<small>217</small>
+|-
+|''for mi presenta for ju biskusa eta sagarduna''||Bizkotxa eta sagardoa emango dizkizut||''Eg skal gefa þier braudkoku og Syrdryck''||Ik geav u broudkoken en suren drank{{info|Et baskiske woord ''sagarduna'' bedüdet 'cider', mär et yslandske woord ''syrdryck'' is 'suren drank'.}}
+|<small>218</small>
+|-
+|''trucka cammisola''||Jertse bat erosi||''kaufftu peisu''||koupt nen tröj
+|<small>219</small>
+|-
+|''sumbatt galsardia for''||Zenbat galtzerditarako?||''fyrer hvad marga socka''||Vöär wovöäle sokken?
+|<small>220</small>
+|-
+|''Cavinit trucka for mi''||Ez dut ezer erosiko||''eckert kaupe eg''||ik koupe niks
+|<small>223</small>
+|-
+|''Christ Maria presenta for mi Balia, for mi, presenta for ju bustana''||Kristok eta Mariak balea ematen badidate, buztana emango dizut||''gefe Christur og Maria mier hval, skal jeg gefa þier spordenn''||Gavven Christus en Maria my ne walviske, geav ik u den start
+|<small>224</small>
+|-
+|''for ju mala gissuna''||Gizon gaiztoa zara||''þu ert vondur madur''||Y sint nen düvelskop
+|<small>226</small>
+|-
+|''presenta for mi berrua usnia eta berria bura''||Emadazu esne beroa eta gurin berria||''gefdu mier heita miölk og nyt smior''||Geavet my heyte melk en nyen boater
+|<small>227</small>
+|-
+|''ser travala for ju''||Zertan egiten duzu lan?||''hvad giorer þu''||Wat vöär wark doo y?
+|<small>228</small>
+|}
+
+De meyste van disse wöörde koamet uut et baskisk:
+* '''atorra''', ''atorra'' 'shirt'
+* '''balia''', ''balea'' 'baleinwalviske'
+* '''berria''', ''berria'' 'ny'
+* '''berrua''', ''beroa'' 'warm'
+* '''biskusa''', ([[Lapurdiaansk]]) leynwoord ''bizkoxa'' 'besküte'
+* '''bocata'''{{info|Deen suggests that ''bocata'' is ''bokhetatu'' with the Spanish translation ''colar'' 'sieve', 'percolate' or 'pass'. The Icelandic equivalent is ''þvodu'' 'wash!'.{{sfn|Deen|1937|p=102}}}}
+* '''bustana''', ''buztana'' 'start'
+* '''eta''', ''eta'' 'en'
+* '''galsardia''', ''galtzerdia'' 'de sokke'
+* '''gissuna''', ''gizona'' 'den man'
+* '''locaria''', ''lokarria'' 'et koord'
+* '''sagarduna''', ''sagardoa'' 'de cider'
+* '''ser''', ''zer'' 'wat'
+* '''sumbatt''', ''zenbat'' 'wo vöäle'
+* '''travala''', oldbaskisk ''trabaillatu'', verwant an fransk ''travailler'' en spaansk ''trabajar'' 'warken'
+* '''usnia''', ''esnea'' 'de melk'
+* '''bura''', 'boater', uut baskisk [[Lapurdiaansk]] leenwoord ''burra'' (vergelyk fransk''beurre'' en italiaansk ''burro'')
+
+Wat wöörde hebbet germaanske wörtel:
+* '''for''' in de sinne ''sumbatt galsardia for'' kan afleidet weasen van meyrdere språken
+* '''for mi''', kan uut et engelsk 'for me' (as onderwarp en lydend vöärwarp; 'Ik' and 'my') of neadersassisk 'vöär my'
+* '''for ju''', engelsk 'for you' of neadersassisk 'vöär ju'
+
+Anderen koamet uut romaanske språken:
+* '''cammisola''', spaansk ''camisola'' 'shirt'
+* '''fenicha''', spaansk ''fornicar'' 'nöken'
+* '''mala''', French or spaansk ''mal'' 'slecht' of 'düvels'
+* '''trucka''', spaansk ''trocar'' 'uutwesselen', mär kan ouk uut et baskisk ''trukea'' (uutwesseling) koamen.
+
+Der ståt ja årdig wat spaanske en franske wöörde in de wöördelysten. Toch hevt dit nit med de mengspråke selv te maken, mär vöäral med den invlood wat dee språken al eywen up et baskisk harren. Dårnöäst is et anneamelik dat vöäle van de baskiske sealüde meyrdere språken kunden, med name fransk en spaansk. Dat sul verklåren wårümme by vöärbeyld et yslandske ''ja''  in et baskisk ''bai'' en fransk ''vÿ'' (moderne skryvwyse: ''oui'') is oaversat up et eynde van de Vocabula Biscaica.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Taol]]
