*Empty MediaWiki Message*

--- a/Leer_(Oostfraislaand).mw
+++ b/Leer_(Oostfraislaand).mw
@@ -1,4 +1,4 @@
-'''Leer''' is n stad in de [[Duutslaand|Duutske]] bondesland [[Nedersaksen]] in [[Oostfraislaand]] un het  34.226  inwoners (2017). Se is nah [[Emden]] un [[Aauwerk]] de dartgröttste stad in Oostfreisland.
+'''Leer''' is n stad in de [[Duutslaand|Duutske]] bondesland [[Nedersaksen]] in [[Oostfraislaand]] un het  34.226  inwoners (2017). Se is nah [[Emden]] un [[Aauwerk]] de dartgröttste stad in Oostfraislaand.
 
 == Weblinks ==
 {{Commonscat|Leer (Lower Saxony)}}
