--- a/Griekenlaand.mw
+++ b/Griekenlaand.mw
@@ -26,7 +26,7 @@ Elliniki Demokratia
 * Grootste rivieren: [[Alpheüs|Álfios]], [[Axios]], [[Maritsa|Evros]], [[Nestos]], [[Strymon]].
 * Grootste meer: [[Prespameer]] (gedieltelijk boeten Griekenlaand legen)
 * Hoogste punt: [[Olympus (barg)|Olympus]] 2917 m.
-* Officiële naom: Griekse (of: Helleense) Rippebliek (Ελληνική Δημοκρατία = ''Elleniké Demokratia'')
+* Officiële naom: Griekse (of: Helleense) Rippebliek (Ελληνική Δημοκρατία = ''Elliniki Dimokratia'')
 * Muntienheid veur 2002: [[drachme]].
 * Onofhankelijkheid van 't [[Ottomaanse Riek]] op [[25 meert]] [[1821]] en erkenning in [[1828]].
 
