--- a/Däänsk.mw
+++ b/Däänsk.mw
@@ -1,8 +1,15 @@
-[[Ofbeelding:Danishdialectmap.png|thumb|right|Dialecten in Denemarken]]
-'''Deens''' (''Dansk'') is een [[Noord-Germaans]]e tale. 't Wordt esprokken deur umsgeveer 5,5 miljoen mensen. Het is de tale van bi-jnoa alle [[Denen]] en de enige officiële landstaal van [[Denemarken]]. In de [[Denmaark|Deense]] gebiedsdelen [[Gruunlaand|Gruinlaand]] en de [[Fareurailanden]] wordt 't Deens deur moar een kleine minderheid van de bevolking esprokken. Ok op [[Ieslaand]] een vroggere kolonie van [[Denemarken]] wordt deur een enkeling nog Deens esprokken. In [[Sleeswiek-Holstein]] (in [[Zuud-Sleeswiek]]) is der nog een kleine bevolkingsgroep dèn Deens proat. Het Deens hef 't [[Latien]]se alfabet, dat noa de Z an-evuld wordt met dri-j Deense letters, de Æ of æ (uutesprokken as èè of ae, zoas in ''peer''), de Å of å (uut-esprokken as de [[Nedersaksisch]]e ao of zoas in t Engelse ''thought'') en de Ø of ø (uut-esprokken as eu zoas in ''neut''). De v wordt uutesprokken as w. In 't Deens wordt de letters q, w, x en z noagenoeg niet ebruukt. Een kenmerk van de Deense uutspraak is de glottisslag oftewal de Deense [[stød]]. In sommige woorden sloat de stembanden noa een lange klinker effen dichte. In de Nedersaksische dialecten gebeurt dat ok in bi-jveurbeeld ut woord "lopen"; ut wordt dan uut-esprokken as "loo'm" (of "maken" - maa'ng} In de [[Germaanse]] talen bunt dat wieters uutzonderingen. Maor in 't Deens he'j woorden die wordt onderscheiden van mekare deur of ze wal of gin stoot hebt, 't is verwant met 't toon-inderscheid in beveurbeld 't Zweeds en Noors en ook in 't Limburgs. 't Deens is heel nauw verbonden met 't Noors, wat umsgeveer 'tzelfde eschreven wordt, moar wal een andere uutspraak hef. Noorwegen hef een tiedlang deel uut-emaakt van 't Koninkriek Denemarken. Vanuut taalkundig opzicht zol het Noors as een Deens [[dialect]] ezien kunnen worden. Vanuut dat standpunt zollen 10 miljoen mensen Deens sprekken.
+[[Bestaand:Danishdialectmap.png|thumb|right|Dialekten in Dänemarken]]
+[[Bestaand:Idioma_danés.PNG|thumb|right|Et däänske taalgebeed]]
+'''Däänsk''' (in de taal selv: ''dansk'') is een [[Noord-Germaanse taelen|noordgermaanske]] taal. Et wordt esprokken döär ümsgevear 5,5 miljoon mensken. Et is de taal van bynå alle [[denen|dänen]] en is de eynigste officiele landstaal van [[Denmaark|Dänemarken]]. In de [[Denmaark|däänske]] gebeedsdeylen de [[Färöer]] en [[Gruunlaand|Gröönland]] wordt et däänsk döär mår een kleine minderheid van de bevolking esprokken, mår hevt dår nåst de volkstaal wal een officiele ståtus. Et däänsk dat up de Färöer esprokken wordt, wordt ouk wal [[Gøtudanskt]] (''stråtdäänsk'') enöömd. Ouk in et [[Duutslaand|düütske]] [[Sleeswiek-Holstain|Sleyswyk-Holstein]] is der noch een kleine bevolkingsgrup den däänsk pråt, wår et de officiele ståtus van [[minderheidstaal]] hevt. Up [[Ysland]], een vroggere kolony van [[Denmaark|Dänemarken]], wordt et däänsk vake as tweyde of darde taal esprokken, en is et een verplicht skoolvak up de basisskole. 
 
-== Dialecten ==
-In [[Denemarken]] wordt verschillende dialecten esprokken. In Jytlaand wordt [[Jytlaands]] esprokken. [[Jytlaands]] kan op-edeeld worden in ''Nørrejysk'' en ''Sønderjysk'' (in [[Zuud-Jytlaand]] / [[Sleeswiek]]). Het ''Nørrejysk'' ([[Noord-Jytlaand]]) kan op-edeeld worden in Østjysk en Vestjysk. Wieters wordt der ''Østdansk'' (''Oostdeens'', op [[Bornholm]] en in [[Skåne]]) en ''Ødansk'' (Emål, op de eilanden [[Seeland]] en [[Funnen]]) esprokken. Dizze dialecte moar wordt in Denemarken niet as officiële streektale erkend. In [[Zuud-Jytlaand]] (in [[Noord-Sleeswiek]]) is der nog een kleine bevolkingsgroep dèn ook [[Nedersaksisch]] ([[Sleeswieks]]) proat.
+== Däänsk alfabet ==
+Et däänsk wordt eskreaven in et [[latainse alfabet|latynske alfabet]], dat nå de Z anevuld wordt med dree däänske letters, de Æ (æ) (üütesprokken as /ɛ(ː)/, so as in ''literäär''), de Å (å) (dat lykas de [[Nedersaksies|sassiske]] ''å'', ''ao'' of ''oa'' üütesprokken wordt as /ɔː/, of so as in et engelske ''thought'') en de Ø (ø) (üütesprokken as /øː/ so as in ''nöäte''). De V wordt üütesprokken as W. In et däänsk wordet de letters Q, W, X en Z håst neet gebrüked. 
+
+== Kenmarken ==
+Een kenmark van de däänske üütspråke is de glottisslag oftewal de däänske [[stød]]. In summige woorden slåt de stembanden nå een lange klinker evven dichte. In de sassiske dialekten geböärt dat ouk in byvöärbeald et woord 'loupen'; et wordt dan üütesprokken as /loː(p)ʔm̩/ (of 'maken' as /maːkʔŋ/). In de [[Germaanse talen|germaanske talen]] bint dat wyders üütsunderingen. Mår in et däänsk heb y woorden dee underskeiden wordet van mekare döär of se wal of gin stød hebbet, et is verwand med et toonunderskeid in byvöärbeald et sweedsk en noorsk en ouk in t limbörgsk. Et däänsk is heyl nauw verbunden med et noorsk, wat ümsgevear etselvde eskreaven wordt, mår wal een andere üütspråke hevt. Noorweagen hevt een tyd lang deyl üütemaked van et Koaningryk Dänemarken. Vanüüt taalkundig upsicht sol et noorsk as een däänsk [[dialekt]] eseen künnen worden. Vanüüt dat standpunt sollen 10 miljoon mensken däänsk sprekken.
+
+== Dialekten ==
+In [[Denmaark|Dänemarken]] wordet verskillende dialekten esprokken. In [[Jütland]] wordt [[Jütlands]] esprokken. [[Jütlands]] kan upedeyld worden in ''nørrejysk'' en ''sønderjysk'' (in [[Süüdjütland]] / [[Sleyswyk]]). Et ''nørrejysk'' ([[Noordjütland]]) kan upedeyld worden in østjysk en vestjysk. Wyders wordt der ''østdansk'' (''oustdäänsk'', up [[Bornholm]] en in [[Skåne]]) en ''ødansk'' (Emål, up de eilanden [[Seeland]] en [[Funnen]]) esprokken. Disse dialekten wordet in Dänemarken neet as officiele streaktaal erkend. In [[Süüdjütland]] (in [[Noord-Sleeswiek|Noordsleyswyk]]) is der noch een kleine bevolkingsgrup den ouk [[Nedersaksies|sassisk]] ([[sleyswyksk]]) pråt.
 
 {{Germoans}}
 
