--- a/Däänsk.mw
+++ b/Däänsk.mw
@@ -9,7 +9,7 @@ Et däänsk wordt eskreaven in et [[latainse alfabet|latynske alfabet]], dat nå
 Een kenmark van de däänske üütspråke is de glottisslag oftewal de däänske [[stød]]. In summige woorden slåt de stembanden nå een lange klinker evven dichte. In de sassiske dialekten geböärt dat ouk in byvöärbeald et woord 'loupen'; et wordt dan üütesprokken as /loː(p)ʔm̩/ (of 'maken' as /maːkʔŋ/). In de [[Germaanse talen|germaanske talen]] bint dat wyders üütsunderingen. Mår in et däänsk heb y woorden dee underskeiden wordet van mekare döär of se wal of gin stød hebbet, et is verwand med et toonunderskeid in byvöärbeald et sweedsk en noorsk en ouk in et limbörgsk. Et däänsk is heyl nauw verbunden med et noorsk, wat ümsgevear etselvde eskreaven wordt, mår wal een andere üütspråke hevt. Noorweagen hevt een tyd lang deyl üütemaked van et Koaningryk Dänemarken. Vanüüt taalkundig upsicht sol et noorsk as een däänsk [[dialekt]] eseen künnen worden. Vanüüt dat standpunt sollen 10 miljoon mensken däänsk sprekken.
 
 == Dialekten ==
-In [[Denmaark|Dänemarken]] wordet verskillende dialekten esprokken. In [[Jütland]] wordt [[Jütlands]] esprokken. [[Jütlands]] kan upedeyld worden in ''nørrejysk'' en ''sønderjysk'' (in [[Süüdjütland]] / [[Sleyswyk]]). Et ''nørrejysk'' ([[Noordjütland]]) kan upedeyld worden in østjysk en vestjysk. Wyders wordt der ''østdansk'' (''oustdäänsk'', up [[Bornholm]] en in [[Skåne]]) en ''ødansk'' (Emål, up de eilanden [[Seeland]] en [[Funnen]]) esprokken. Disse dialekten wordet in Dänemarken neet as officiele streaktaal erkend. In [[Süüdjütland]] (in [[Noord-Sleeswiek|Noordsleyswyk]]) is der noch een kleine bevolkingsgrup den ouk [[Nedersaksies|sassisk]] ([[sleyswyksk]]) pråt.
+In [[Denmaark|Dänemarken]] wordet verskillende dialekten esprokken. In [[Jütland]] wordt [[Jütlands]] esprokken. [[Jütlands]] kan upedeyld worden in ''nørrejysk'' en ''sønderjysk'' (in [[Süüdjütland]] / [[Sleyswyk]]). Et ''nørrejysk'' ([[Noordjütland]]) kan upedeyld worden in østjysk en vestjysk. Wyders wordt der ''østdansk'' (''oustdäänsk'', up [[Bornholm]] en in [[Skåne]]) en ''ødansk'' (Emål, up de eilanden [[Seeland]] en [[Funnen|Fünnen]]) esprokken. Disse dialekten wordet in Dänemarken neet as officiele streaktaal erkend. In [[Süüdjütland]] (in [[Noord-Sleeswiek|Noordsleyswyk]]) is der noch een kleine bevolkingsgrup den ouk [[Nedersaksies|sassisk]] ([[sleyswyksk]]) pråt.
 
 {{Germoans}}
 
