*Empty MediaWiki Message*

--- a/Roeaan.mw
+++ b/Roeaan.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Plan de Rouen.jpg|thumb|250px|De kaorte van Roeaan]]
 '''Roeaan''' of '''Rouen''' (in 't [[Frans]] zelf: ''Rouen'', [[Latien]]: ''Rotomagus'') is een [[Stad (woonstee)|stad]] in [[Normandië]] en de eufdstad van 't [[Frankriek|Franse]] [[departement (Frankriek)|departement]] [[Seine-Maritime]]. De stad ef 106.560 [[Bevolking|inwoners]] en leg an de [[Seine]]. 't Olde centrum leg op de rechteroever. [['t Kenaol]] leg hemelsbreed zo'n 70 kilemeter westelijker. 't Stedelijk gebied van Roeaan had in [[1999]] 391.375 inwoners.
 
-Roeaan is een olde stad mit een lange geskiedenisse. De [[Romeinse Riek|Romeinen]] kenden Roeaan as Rotomagus. In de [[3e eeuw]] is Roeaan een bisskopszetel ewörren. Tiedens de [[Honderdjaorige Oorlog]] kwam de stad in hanen van de Engelsen ([[1419]]). In [[1431]] ston in Roeaan de braandstapel waorop [[Jeanne d'Arc]] as ketterse ter dood ebracht is.
+Roeaan is een olde stad mit een lange geskiedenisse. De [[Romeinse Riek|Romeinen]] kenden Roeaan as Rothomagus. In de [[3e eeuw]] is Roeaan een bisskopszetel ewörren. Tiedens de [[Honderdjaorige Oorlog]] kwam de stad in hanen van de Engelsen ([[1419]]). In [[1431]] ston in Roeaan de braandstapel waorop [[Jeanne d'Arc]] as ketterse ter dood ebracht is.
 
 == Museums ==
 * 't ''[[Musée des beaux-arts]]'' is 't keunstmuseum van de stad.
