--- a/Ysland-baskisk.mw
+++ b/Ysland-baskisk.mw
@@ -4,7 +4,7 @@
 
 Et '''ysland-baskisk''' was ne [[pidginspråke|mengspråke]] in [[Ysland]], baseerd up et [[baskisk]]. Et har baskiske, [[germaanse taelen|germaanske]] en [[romaanske språken|romaanske]] wöörde. 
 
-Baskiske walviskvårders dee når de yslandske [[westfjorden]] seilden, gebröäken de mengspråke üm up simpele wyse med de lokåle lüde te küren. Et kan in de Westfjorden untstån weasen (dår sint de handskrivten emaked), mär ümdat der ouk kenmarken uut andere europääske språken in sittet, likt et der up dat et argens anders untstån is en döär de seylüde med når Ysland enöämen. In de böke ståt baskiske sinnen med wöörde uut et [[nederlaands|neaderlandsk]], [[engels]]k, [[fraans|fransk]], [[duuts|düütsk]] en [[spaans]]k. Et hevt der skyn van dat et ysland-baskisk düs ginnen mengvörm van baskisk en yslandsk is, mär van baskisk en andere språken. Et heyt enkel so ümdat et in Ysland dokumenteerd is.
+Baskiske walviskvårders dee når de yslandske [[westfjorden]] seilden, gebröäken de mengspråke üm up simpele wyse med de lokåle lüde te küren. Et kan in de Westfjorden untstån weasen (dår sint de handskrivten emaked), mär ümdat der ouk kenmarken uut andere europääske språken in sittet, likt et der up dat et argens anders untstån is en döär de seylüde med når Ysland enöämen. In de böke ståt baskiske sinnen med wöörde uut et [[nederlaands|neaderlandsk]], [[engels]]k, [[fraans|fransk]], [[duuts|düütsk]] en [[spaans]]k. Et hevt der skyn van dat et ysland-baskisk düs ginnen mengvörm van baskisk en yslandsk is, mär van baskisk en andere språken. Et heat enkel so ümdat et in Ysland dokumenteerd is.
 
 Der sint mär een pår handskrivten vünden med nen ysland-baskisk oaversicht. Kennis oaver de mengspråke is beparked.
 
@@ -19,7 +19,7 @@ Der sint mär nen handvul wöördelyste vünden. Twey dårvan satten by de hands
 
 * ''[[#vocabula biscaica|Vocabula Biscaica]]'' ("[[biskai]]ske (baskiske) wöörde"). Ne oaverskryving döär Jón Ólafsson. Et oorsprungelike dokument is verlöären. Et hevt 229 wöörde en korte sinnen, en 49 telwöörde. Ouk hyr ståt verskeidene wöörde uut de ysland-baskiske mengspråke tüsken.
 
-De handskrivten wörden rund 1925 wearevünden döär den yslandsken [[filology|filologist]] [[Jón Helgason (dichter)|Jón Helgason]] in de [[Arnamagnæ-versameling]] an de [[Universiteit van Koupenhaven]]. Hee skreyv de lysten oaver, satten de yslandske wöörde ümme in et düütsk en stüürden de kopyen når professor [[Christianus Cornelius Uhlenbeck]] van de [[Universiteit van Leiden]] in [[Nederlaand|Neaderland]]. Uhlenbeck was bekend med baskisk, mär ümdat hee in 1926 med pensioon gung, spölden hee de lysten döär an synen doktorålstudent Nicolaas Gerard Hendrik Deen. Deen nöäm kontakt up med den baskisken professor [[Julio Urquijo Ibarra]]. In [[1937]] gavven Deen syn [[doktorålskrivt]] uut oaver de ysland-baskiske wöördelysten. Et wör de ''Glossaria duo vasco-islandica'' nöömd en skreaven in [[latyn]]. De meyste sinnen wörden ouk in et düütsk en spaansk ümmesatted.
+De handskrivten wörden rund 1925 wearevünden döär den yslandsken [[filology|filologist]] [[Jón Helgason (dichter)|Jón Helgason]] in de [[Arnamagnæ-versameling]] an de [[Universiteit van Koupenhaven]]. Hee skreyv de lysten oaver, satten de yslandske wöörde ümme in et düütsk en stüürden de kopyen når professor [[Christianus Cornelius Uhlenbeck]] van de [[Universiteit van Leiden]] in [[Nederlaand|Neaderland]]. Uhlenbeck was bekend med baskisk, mär ümdat hee in 1926 med pensioon gung, spölden hee de lysten döär an synen doktoraalstudent Nicolaas Gerard Hendrik Deen. Deen nöäm kontakt up med den baskisken professor [[Julio Urquijo Ibarra]]. In [[1937]] gavven Deen syn [[doktoraalskrivt]] uut oaver de ysland-baskiske wöördelysten. Et wör de ''Glossaria duo vasco-islandica'' nöömd en skreaven in [[latyn]]. De meyste sinnen wörden ouk in et düütsk en spaansk ümmesatted.
 
 In 1986 wörden Ólafsson syne handskrivten vanuut [[Denmaark|Dänemarken]] wear terügge bracht når Ysland.<ref>[https://web.archive.org/web/20120501170612/http://www.euskosare.org/euskara/basque_fishermen_iceland_bilingual_vocabularies_17_18_centuries Knörr, Henrike. Basque fishermen Iceland bilingual vocabularies 17 18 Centuries. (2007). Bekeaken up 4 april 2019.</ref>
 
