--- a/Uganda.mw
+++ b/Uganda.mw
@@ -5,30 +5,30 @@
 | woapn =Coat_of_arms_of_Uganda.svg
 | woapnartikel = 
 | lokasie = Uganda (orthographic projection).svg
-| sproaken = [[Engels]]k (officieel), [[Swahili]], [[Luganda]], [[Runyoro]], [[Ruyankole]], [[Rukiga]], [[Luo]]
+| sproaken = [[engels]]k (officieel), [[swahili]], [[luganda]], [[runyoro]], [[ruyankole]], [[rukiga]], [[luo]]
 | heufdstad = [[Kampala]]
-| geleuf = [[Christendom]], [[Islam]]
-| regeringsvörm = [[Republiek|Republik]]
+| geleuf = [[christendom]], [[islam]]
+| regeringsvörm = [[Republiek|republik]]
 | inwonners =  37.873.253 | dichtheid = 157,1
 | km2 = 241.038
 | breedtegroad = 1/00//N 
 | lengtegroad = 32/00//E 
 | region = UG
 | pctwater = 15,39
-| munteenheid = [[Ugandeeske Shilling]]  | valutakode = (UGX)
+| munteenheid = [[ugandääske sjilling]]  | valutakode = (UGX)
 | tiedzone = [[EAT]] ([[UTC]]+3)
 | volksleed = [[Oh Uganda, Land of Beauty]]
 | feestdag =
 | tld = ug | laandkode = UG | tel = 256 <small>(006 vanuut Tanzania en Kenia)</small>
 }}
 
-'''Uganda''' (officiääl '''Republik Uganda''') is een land in [[Oost-Afrika]]. Et grenset med de klokke med an [[Zuud-Soedan|Süüd-Sudan]] in et noorden, [[Kenia]] in et noordoosten, [[Tansania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Grote-merenstrekke]]. Et ligt ok in et ströymgebeyd van den [[Niel|Nyl]] en hef een [[eavenårsklimaat]].
+'''Uganda''' (officieel '''Republik Uganda''') is een land in [[Afrika|Oustafrika]]. Et grenst med de klokke med an [[Zuud-Soedan|Süüdsudan]] in et noorden, [[Kenia]] in et noordousten, [[Tanzania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Groute Mearen]]-strekke. Et ligt ouk in et ströymgebeed van den [[Niel|Nyl]] en hevt een [[eavenårsklimåt]].
 
-De inwoaners van Uganda warren [[jager-gadderaars]] töt ongevear 1700 of 2300 jår eleaden, doo as [[Bantu]]-volker op et süden antröyken. Et land splitteden sik op [[9 oktober]] [[1962]] af van et [[Vereanigd Keuninkriek|Vereanigd Köninkryk]]. Den naam hebt se van et olde köninkryk [[Buganda]]. Dat beslöyg et südelike deyl van et land, med inbegrip van de hüdige höyvdstad [[Kampala]]. Dårnöäst warren der in Uganda nog veer köninkryken: Ankole, Bunyoro-Kitara, Busoga en Togo. 
+De inwoaners van Uganda warren [[jager-gadderaars]] töt ungevear 1700 of 2300 jår eleaden, do as [[bantu]]volker up et süden antrökken. Et land splitteden sik up [[9 oktober]] [[1962]] af van et [[Vereanigd Keuninkriek|Vereynigd Köäningryk]]. Den name hebbet se van et olde köäningryk [[Buganda]]. Dat beslöög et südelike deyl van et land, med inbegrip van de hüdige höyvdstad [[Kampala]]. Dårnöäst warren der in Uganda nog veer köäningryken: Ankole, Bunyoro-Kitara, Busoga en Togo. 
 
-Nå öäre afsplitsing bröyk der nen börgeroorlog uut, wårdöär der teendusenden uut de tyd köämen en meyr as nen miljoon lüde up de vlücht mussen. De unröste in et land böyd under meyr [[Idi Amin]] nen kans üm de macht te grypen. Hee untwikkelden sik as eyne van de meyst gevreasde [[diktatuur|diktators]] van de wearld.
+Nå öäre afsplitsing bröäk der nen börgeroorlog uut, wårdöär der teendusenden uut de tyd köämen en meyr as nen miljoon lüde up de vlücht mosten. De unrüste in et land böyd under meyr [[Idi Amin]] nen kans üm de macht te grypen. Hee untwikkelden sik as eyne van de meyst gevreasde [[diktatuur|diktators]] van de wearld.
 
-Uganda is nu ne republik med 77 distrikten oaver veer låndsstreaken. Den hüdigen president is [[Yoweri Kaguta Museveni]], den as nå nen sesjårigen bosoorlog in [[1986]] an de macht köäm. De officiäle språken sint [[Engels|engelsk]] en [[swahili]]. Et [[luganda]] is ne språke wat döär et heyle land köyerd wördet. Dårnöäst gevt et noch et [[runyoro]], [[royankole]], [[rukiga]] en et [[luo]].
+Uganda is nu ne republik med 77 distrikten oaver veer landsstreaken. Den hüdigen president is [[Yoweri Kaguta Museveni]], den as nå nen sesjårigen bosoorlog in [[1986]] an de macht köäm. De officiele språken sint [[Engels|engelsk]] en [[swahili]]. Et [[luganda]] is ne språke wat döär et heyle land küürd wördet. Dårnöäst gevt et noch et [[runyoro]], [[royankole]], [[rukiga]] en et [[luo]].
 
 {{begin}}
 {{Dialekt|twd}}
