*Empty MediaWiki Message*

--- a/Uganda.mw
+++ b/Uganda.mw
@@ -1,5 +1,5 @@
 {{Laandtabel-twd
-| naaminlaandssproak = Republic of Uganda<br />Ugandeyse Reypüblyk
+| naaminlaandssproak = Republic of Uganda<br />Republik Uganda
 | vlagge =  Flag of Uganda.svg
 | vlagartikel = Vlagge van Uganda
 | woapn =Coat_of_arms_of_Uganda.svg
