*Empty MediaWiki Message*

--- a/Uganda.mw
+++ b/Uganda.mw
@@ -31,7 +31,7 @@ Nå öäre afsplitsing bröäk der nen börgeroorlog uut, wårdöär der teendus
 Uganda is nu ne republik med 77 distrikten oaver veer landsstreaken. Den hüdigen president is [[Yoweri Kaguta Museveni]], den as nå nen sesjårigen bosoorlog in [[1986]] an de macht köäm. De officiele språken sint [[Engels|engelsk]] en [[swahili]]. Et [[luganda]] is ne språke wat döär et heyle land küürd wördet. Dårnöäst gevt et noch et [[runyoro]], [[royankole]], [[rukiga]] en et [[luo]].
 
 {{begin}}
-{{Dialekt|twd}}
+{{Dialekt|twd||Nysassiske Skryvwyse}}
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Laand]]
