*Empty MediaWiki Message*

--- a/Ysselakademy-spelling.mw
+++ b/Ysselakademy-spelling.mw
@@ -1,4 +1,4 @@
-De '''Ysselakademy-spelling''' (in de skryvwyse selv: ''Iesselakkedemie-spelling'') is een [[Leegsaksische orthogroafie|spellingsrichtlynde]] dee untwikkeld is vöär et [[Sallaands|Sallands]] (en et noordwestoaverysselsk) en et [[Oost-Veluws|oustveluwsk]]. As basis vöär disse spelling is de neaderlandske spelling eköäsen, ümdat der vanüüt egån wördt dat ydereyne dee [[streektaol|streaktaal]] wil skryven ouk neaderlandsk kan skryven, dan wördt et ouk makkeliker üm et gauwer an te leyren. Schryvwyses as ''schriemm'' (skryven) of ''oe:mm'' (hoven) sül jy düs neet teagenkummen. De Ysselakademy-spelling likt årdig up de [[SONT-spelling]], up een pår punten nå, byvöärbeald: ''hontien'' in plaatse van ''hondtien'' en et underskeid tüsken de klanken ä [æ] (völt in SONT under e, in verkleinwoorden ä) en ää [æː] (völt in SONT onder ae).
+De '''Ysselakademy-spelling''' (in de skryvwyse selv: ''Iesselakkedemie-spelling'') is een [[Leegsaksische orthogroafie|spellingsrichtlynde]] dee untwikkeld is döär de [[Ysselakademy]] vöär et [[Noord-Oaveriessels|noordoaverysselsk]], [[Sallaands|sallandsk]] en et [[Oost-Veluws|oustveluwsk]]. As basis vöär disse spelling is de neaderlandske spelling eköäsen, ümdat der vanüüt egån wördt dat ydereyne dee [[streektaol|streaktaal]] wil skryven ouk neaderlandsk kan skryven, dan wördt et ouk makkeliker üm et gauwer an te leyren. Skryvwyses as ''schriemm'' (skryven) of ''oe:mm'' (hoven) sül jy düs neet teagenkummen. De Ysselakademy-spelling likt årdig up de [[SONT-spelling]], up een pår punten nå, byvöärbeald: ''hontien'' in plaatse van ''hondtien'' en et underskeid tüsken de klanken ä [æ] (völt in SONT under e, in verkleinwoorden ä) en ää [æː] (völt in SONT under ae).
 
 ==Letters en kombinatys==
 ===Klinkers===
