*Empty MediaWiki Message*

--- a/Bates_Motel_(televisysery).mw
+++ b/Bates_Motel_(televisysery).mw
@@ -1,7 +1,7 @@
 [[Bestaand:Logo_de_la_série_télévisée_Bates_Motel.png|thumb|Bealdmark van ''Bates Motel'']]
-'''''Bates Motel''''' is een [[Verienigde Staoten van Amerike|amerikaanske]] [[psychologiske horror]]-[[drama]]sery oaver et leaven van ''Norman Bates''. De sery is eproduceerd vöär de amerikaanske televisysender [[A&E]], en wördden üütesünden van [[18 meert|18 määrt]] [[2013]] tot [[24 april]] [[2017]], dårnåst is et beskikbår esteld up [[Netflix]]. Et vertelt de vöärgeskydenisse van de film ''[[Psycho]]'' van [[Alfred Hitchcock]] (ebaseerd up et gelyknamige book van [[Robert Bloch]]), en richt sik up de relaty tüsken Norman en syn mo, ''Norma''. De sery verskilt up summige punten van de film, so is et byvöärbeald når de teagenswoordige tyd vertaald, spöält et sik of in een andere fiktive plaatse, en is et tynerleaven van Norman anders as in de film.
+'''''Bates Motel''''' is een [[Verienigde Staoten van Amerike|amerikaanske]] [[psychologiske horror]]-[[drama]]sery oaver et leaven van ''Norman Bates''. De sery is eproduceerd vöär de amerikaanske televisysender [[A&E]], en wördden üütesünden van [[18 meert|18 määrt]] [[2013]] tot [[24 april]] [[2017]], dårnåst is et beskikbår esteld up [[Netflix]]. Et vertelt de vöärgeskydenisse van de film ''[[Psycho]]'' van [[Alfred Hitchcock]] (ebaseerd up et gelyknamige book van [[Robert Bloch]]), en richt sik up de relåty tüsken Norman en syn mo, ''Norma''. De sery verskilt up summige punten van de film, so is et byvöärbeald når de teagenswoordige tyd vertaald, spöält et sik of in een andere fiktive plaatse, en is et tynerleaven van Norman anders as in de film.
 
-De sery begint in [[Arizona]] mid de doud van Normas man, wårnå se et ''Seafairer Motel'' koupt in de fiktive plaatse ''White Pine Bay'', [[Oregon]], sodat see en Norman samen dår een ny leaven künnen upbowen. De dårup volgende seisonen richten sik up Normans geystelike andoning dee aldöär gevårliker wördt, en ho Norma worstelt höär söäne te beskarmen teagen sikselv, en degeynen rundüm hüm. De sery is efilmd krekt büten et [[Kanada|kanadääske]] [[Vancouver]] in [[Aldergrove]], [[Britsk-Kolumbia]] en up andere lokatys binnen de [[Fraservallei]].
+De sery begint in [[Arizona]] mid de doud van Normas man, wårnå se et ''Seafairer Motel'' koupt in de fiktive plaatse ''White Pine Bay'', [[Oregon]], sodat see en Norman samen dår een ny leaven künnen upbowen. De dårup volgende seisonen richten sik up Normans geystelike andoning dee aldöär gevårliker wördt, en ho Norma worstelt höär söäne te beskarmen teagen sikselv, en degeynen rundüm hüm. De sery is efilmd krekt büten et [[Kanada|kanadääske]] [[Vancouver]] in [[Aldergrove]], [[Britsk-Kolumbia]] en up andere lokåtys binnen de [[Fraservallei]].
 
 == Rollen ==
 {{Dubbele ofbealding|rechts|Vera Farmiga 2, 2011.jpg|170|Freddie Highmore 2013 (Straighten Crop).jpg|150|Vera Farmiga|Freddie Highmore}}
