*Empty MediaWiki Message*

--- a/Televisy.mw
+++ b/Televisy.mw
@@ -1,22 +1,22 @@
 [[Bestaand:Cptvdisplay.jpg|thumb|Een winkel wår tv's in de verkoup stån]]
 [[Bestaand:Family_watching_television_1958.jpg|thumb|Een family dee tv an et kyken is]]
-'''Televisy''' (of-ekorted: '''tv''') is een [[telekommunikaty]]systeem vöär et versenden van beweagende bealden en gelüüd oaver ofstand. Televisy kwam an et ende van de jåren därtig upsetten, en hevt syn eigen sindsdyn untwikkeld tot een massamedium dat miljarden mensken bereikt. 
+'''Televisy''' (afekorted: '''tv''') is een [[telekommunikåty]]systeem vöär et versenden van beweagende bealden en gelüüd oaver afstand. Televisy kwam an et ende van de jåren dertig upsetten, en hevt syn eigen sindsdyn untwikkeld tot een massamedium dat miljarden mensken bereikt. 
 
-In de beginjåren was der allinnig swart-wittelevisy, eyrst later, ende jåren sestig, kwam de klörentelevisy upsetten. Nå de klörentelevisy hevt de untwikkeling sich döäresetted in digitale televisy, HD, Ultra HD, 3D, ens. In de jåren söäventig kwammen lykegood [[video]]rekorders en later, digitale systemen, wårunder [[dvd|dvd-rekorders]]. 
+In de beginjåren was der allinnig swart-wittelevisy, eyrst later, ende jåren sestig, kwam de klörentelevisy upsetten. Nå de klörentelevisy hevt de untwikkeling sich döäresetted in digitåle televisy, HD, Ultra HD, 3D, ens. In de jåren söäventig kwammen lykegood [[video]]rekorders en later, digitåle systemen, wårunder [[dvd|dvd-rekorders]]. 
 
 == Name ==
-Et woord televisy kümt van et [[Grieks|gryksk]]e woord ''tele'' (''τῆλε'') wat ''veare'' beteykent, en et [[Latien|latynske]] woord ''vision'' wat ''sicht'' beteykent, letterlik düs: ''veare kyken''. In et düütsk, däänsk en noorsk wördt tv-kyken dan ouk respektivelik ''fernsehen'' en ''fjernsyn'' enöömd. Et [[apparaat]] selv wordt in de sassiske dialekten ouk wel een ''kykkaste'' enöömd. 
+Et woord televisy kümt van et [[Grieks|gryksk]]e woord ''tele'' (''τῆλε'') wat ''veare'' beteykent, en et [[Latien|latynske]] woord ''vision'' wat ''sicht'' beteykent, letterlik düs: ''veare kyken''. In et düütsk en däänsk/noorsk wordt tv-kyken dan ouk upeynvolgend ''fernsehen'' en ''fjernsyn'' enöömd. Et [[apparåt]] selv wordt in de sassiske dialekten ouk wel een ''kykkaste'' enöömd. 
 
 == Verbod up tv-kyken ==
-In sommige [[geleuf|godsdeenstige]] ströymingen mag der geen tv-ekeaken worden, of wordt der anbevöälen der vöärsichtig med ümme te gån, een vöärbeald hyrvan is de [[Gereformeerde Gemeentes]], de [[Amish]], en in [[charedisk jodendom]], en in et ortodoks jodendom mag oaver et algemeyn up de [[sabbat]] mag geen tv bedeend worden. 
+In summige [[geleuf|godsdeenstige]] ströymingen mag der geen tv-ekeaken worden, of wordt der anbevöälen der vöärsichtig med ümme te gån, een vöärbeald hyrvan is de [[Gereformeerde Gemeynden]], de [[Amisj]], en in [[charedisk joudendom]], en in et ortodoks jodendom mag oaver et algemeyn up de [[sabbat]] mag geen tv bedeend worden. 
 
 == Untvangstmöägelikheyden ==
 Der bint verskeidene möägelikheyden üm televisy te künnen untvangen:
 
 * Via [[kabeltelevisy]]
-* Digitaal via de eter ([[digitenne]] of [[DVB]])
-* Via [[satelliet]] ([[skottelantenne]])
-* Via een [[breydband-internet]]verbinding ([[ADSL]] of [[kabelinternet]])
+* Digitål via de eter ([[digitenne]] of [[DVB]])
+* Via [[satellyt]] ([[skottelantenne]])
+* Via een [[breydbandinternet]]verbinding ([[ADSL]] of [[kabelinternet]])
 * Via [[glasveasel]]
 
 == Neadersassisk ==
@@ -31,6 +31,6 @@ Der bint verskeidene möägelikheyden üm televisy te künnen untvangen:
 == Üütgånde verwysingen ==
 {{Commonscat|Television}}
 
-{{Dialekt|ovel|[[Une]]|Nysassiske Skryvwyse}}
+{{Dialekt|ovel|[[Une|Üne]]|Nysassiske Skryvwyse}}
 
 [[Kategorie:Tillevisie]]
