*Empty MediaWiki Message*

--- a/Eyw.mw
+++ b/Eyw.mw
@@ -1,6 +1,6 @@
 Een '''eyw''', of een '''jårhunderd''', is een periode van 100 [[jaor|jår]]. Vake wördt edocht dat een nye eyw anvangt by et anbreaken van een jår wårvan et jårtal endigt up 00, byvöärbeald 2000. De twintigste eyw sol dan düren van 1900 t/m 1999. Mär reakenkündig begint een nye eyw by et ende van een jårtal dat endigt up 00; de twintigste eyw löpt düs van 1901 t/m 2000, so is et historisk eseen korrekt en et wördt so ouk underweasen in skolen. 
 
-De westerske (= christelike) [[jaortelling|jårtelling]] bestung de eyrste 6 eywen van de jårtelling noch neet, mär wülen tellen disse eywen wel mead. De eyrste eyw besteyt uut de jåren 1 t/m 100, de tweyde de jåren 101 t/m 200 ensovoords. De [[20e eeuw|20. eyw]], dee inmiddels vöärby is, besteyt uut de jåren 1901 t/m 2000. Nådat et jår 2000 of-elöypen was begün up [[1 jannewaori|1 januåri]] [[2001]] een nye eyw, namelik de 21. (en een ny [[millennium]], namelik de darde). 
+De westerske (= christelike) [[jaortelling|jårtelling]] bestünd de eyrste 6 eywen van de jårtelling noch neet, mär wülen tellen disse eywen wel mead. De eyrste eyw besteyt uut de jåren 1 t/m 100, de tweyde de jåren 101 t/m 200 ensovoords. De [[20e eeuw|20. eyw]], dee inmiddels vöärby is, besteyt uut de jåren 1901 t/m 2000. Nådat et jår 2000 afelöypen was begün up [[1 jannewaori|1 januåri]] [[2001]] een nye eyw, namelik de 21. (en een ny [[millennium]], namelik de darde). 
 
 {| class="wikitable"
 |----- 
