--- a/Ralf_Krewinkel.mw
+++ b/Ralf_Krewinkel.mw
@@ -1,6 +1,8 @@
 [[Ofbeelding:Ralf-krewinkel-1304684684.jpg|200px|right|thumb|Ralf Krewinkel]]
 
-'''Ralf Karel Hubert Krewinkel''' ([[Karkraode]], [[12 november]] [[1974]]) is 'nen [[Nederland]]sen politicus. Sinds 31 augustus 2015 is he [[borgemeister|burgermeester]] van de [[gemiente (bestuur)|gemeente]] [[Heerlen]] in de proveensie [[Limburg (Nederlaand)|Limburg]]. Krewinkel is lid van de [[PvdA]].
+'''Ralf Karel Hubert Krewinkel''' ([[Karkraode]], [[12 november]] [[1974]]) is 'nen [[Nederland]]sen politicus. 
+
+Van 31 augustus 2015 tot 18 maart 2019 was he [[borgemeister|burgermeester]] van de [[gemiente (bestuur)|gemeente]] [[Heerlen]] in de proveensie [[Limburg (Nederlaand)|Limburg]]. Krewinkel is lid van de [[PvdA]].
 
 Van 2011 tot 2015 was het burgermeester van de gemeente [[Beak (gemeente)|Beak]]. Van 1998 tot 2006 was het lid van de [[gemeenteroad]] van de Limburgse gemeente Karkraode en van 2006 tot 2011 [[wetholder]] van Karkraode.
 
