--- a/Tulbaghia.mw
+++ b/Tulbaghia.mw
@@ -1,8 +1,8 @@
 [[Bestaand:Tulbaghia (Society Garlic).jpg|thumb|Kaapske knovlouk]]
 [[Bestaand:Tulbaghiafragrans.jpg|thumb|''Tulbaghia simmleri'']]
-'''''Tulbaghia''''' (beater bekend as '''kaapske knovlouk''' of '''wilde knovlouk''') is een [[geslacht]] van [[eenzaodlobbigen|eynsådlobbige]] [[kruudachtig]]e [[vaste plante|oaverblyvende]] [[bolle|bolgewassen]] dee van oorsprung in [[Afrika]] vöärkummen en dee tot de [[tylousachtigen]] (''Amaryllidaceae'') behöyren. Tulbaghia wördt eklassificeerd as undersoort van de [[loukfamily]], en is vernöömd når [[Ryk Tulbagh]] (1699–1771), een vroggere gouverneur van de [[Kaap de Gode Houp]].
+'''''Tulbaghia''''' (beater bekend as '''kaapske knovlouk''' of '''wilde knovlouk''') is een [[geslacht]] van [[eenzaodlobbigen|eynsådlobbige]] [[krüüdachtig]]e [[vaste plante|oaverblyvende]] [[bolle|bolgewassen]] dee van oorsprung in [[Afrika]] vöärkummen en dee tot de [[tydlousachtigen]] (''Amaryllidaceae'') behöyren. Tulbaghia wördt eklassificeerd as undersoort van de [[loukfamily]], en is vernöömd når [[Ryk Tulbagh]] (1699–1771), een vroggere guvernöör van de [[Kaap de Gode Houp]].
 
-De meyste soorten binnen inheymsk in de [[Oost-Kaap|Oustkaap]] van [[Zuud-Afrika|Süüdafrika]]. Lyk as by andere soorten uut de [[loukfamily]], göären de blåden van de planten uut dit geslacht når [[knoflook|knovlouk]] as se eknöäsd wörden, vandår de name. De blomen wörden edröägen in een skarm. Elke blome hevt ses smalle [[bloomdekblad|bloomdekblåden]]. Kenmarkend vöär et geslacht is dat der een soort "krone" in et midden van de blome sit. Dit kan klein en up skåle weasen of et kan wat grouter weasen, ungevear so as de trompette van een kleine [[tieloze|tylouse]].
+De meyste soorten binnen inheymsk in de [[Oost-Kaap|Oustkaap]] van [[Zuud-Afrika|Süüdafrika]]. Lykas by andere soorten üüt de [[loukfamily]], göären de bladen van de planten üüt dit geslacht når [[knoflook|knovlouk]] as se eknöäsd wörden, vandår de name. De blomen wörden edröägen in een skarm. Elke blome hevt ses smalle [[bloomdekblad|bloomdekbladen]]. Kenmarkend vöär et geslacht is dat der een soort "kroune" in et midden van de blome sit. Dit kan klein en up skåle weasen of et kan wat grouter weasen, ungevear so as de trompette van een kleine [[tieloze|tydlouse]].
 
 ==Soorten==
 {|
@@ -17,7 +17,7 @@ De meyste soorten binnen inheymsk in de [[Oost-Kaap|Oustkaap]] van [[Zuud-Afrika
 # ''[[Tulbaghia coddii]]'' <small>Vosa & R.B.Burb.</small> – Mpumalanga (Süüdafrika)
 # ''[[Tulbaghia cominsii]]'' <small>Vosa</small> – Kaapprovincys (Süüdafrika) 
 # ''[[Tulbaghia dregeana]]'' <small>Kunth</small> – Kaapprovincys (Süüdafrika)
-# ''[[Tulbaghia friesii]]'' <small>Suess.</small> – Nyanga-gebargte Mozambik + Zimbabwe
+# ''[[Tulbaghia friesii]]'' <small>Suess.</small> – Nyanga-gebargde Mozambik + Zimbabwe
 # ''[[Tulbaghia galpinii]]'' <small>Schltr.</small> – Kaapprovincys (Süüdafrika)
 # ''[[Tulbaghia leucantha]]'' <small>Baker</small> – Botswana, Lesotho, Swaziland, Süüdafrika, Zambie, Zimbabwe, Namibie
 |<ol start="14">
@@ -36,7 +36,7 @@ De meyste soorten binnen inheymsk in de [[Oost-Kaap|Oustkaap]] van [[Zuud-Afrika
 <li> ''[[Tulbaghia violacea]]'' <small>Harv.</small>  – kaapske knovlouk – Kaapprovincys, KwaZulu-Natal (Süüdafrika); enaturaliseerd in Tanzania + Mexico
 |}
 
-Party soorten kreagen vrogger de name ''Tulbaghia'', mär binnen teagenswoordig in-edeyld by et geslacht van de [[afrikaanske lelys]] (''Agapanthus''). 
+Party soorten kreagen vrogger de name ''Tulbaghia'', mär binnen teagenswoordig inedeyld by et geslacht van de [[afrikaanske lelys]] (''Agapanthus''). 
 * ''Tulbaghia africana – [[Agapanthus africanus]]'' 
 * ''Tulbaghia heisteri – [[Agapanthus africanus]]'' 
 * ''Tulbaghia minor – [[Agapanthus africanus]]'' 
