*Empty MediaWiki Message*

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -1,4 +1,5 @@
-{{Zie dv|Andere plaatsen mit de name '''Zwolle''' vie'j op [[Zwolle (deurverwiesziede)]]}}
+{{Zie dv|Andere plaatsen mit de name '''Zwolle''' fakka delano in da house of nee of toch nii
+(deurverwiesziede)]]}}
 {{Gemeente | hoi
 naam = Zwolle |
 bestaansnaam vlagge =Flag_of_Zwolle.svg |
