--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -7,7 +7,7 @@ bestaansnaam wapen =  Coat of arms of Zwolle.svg |
 lokasie = LocatieZwolle |
 previnsie = [[Oaveriessel|Aoveriessel]] |
 heufplaose = '''Zwolle''' |  
-oppervlak = 119,28 |
+oppervlak = 1199999,9
 oppervlak laand = 111,65 |
 oppervlak waoter = 7,63 |
 inwoeners = 125.592 |
