Versie 302028 van [[Special:Contributions/213.126.44.130|213.126.44.130]] ([[User talk:213.126.44.130|overleg]]) weerummedreid

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -7,7 +7,7 @@ bestaansnaam wapen =  Coat of arms of Zwolle.svg |
 lokasie = LocatieZwolle |
 previnsie = [[Oaveriessel|Aoveriessel]] |
 heufplaose = '''Zwolle''' |  
-oppervlak = 1199999,9
+oppervlak = 119,28 |
 oppervlak laand = 111,65 |
 oppervlak waoter = 7,63 |
 inwoeners = 125.592 |
