Versie 302025 van [[Special:Contributions/213.126.44.130|213.126.44.130]] ([[User talk:213.126.44.130|overleg]]) weerummedreid

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -1,5 +1,4 @@
-{{Zie dv|Andere plaatsen mit de name '''Zwolle''' fakka delano in da house of nee of toch nii
-(deurverwiesziede)]]}}
+{{Zie dv|Andere plaatsen mit de name '''Zwolle''' vie'j op [[Zwolle (deurverwiesziede)]]}}
 {{Gemeente | hoi
 naam = Zwolle |
 bestaansnaam vlagge =Flag_of_Zwolle.svg |
