Versie 302022 van [[Special:Contributions/213.126.44.130|213.126.44.130]] ([[User talk:213.126.44.130|overleg]]) weerummedreid

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -1,5 +1,5 @@
 {{Zie dv|Andere plaatsen mit de name '''Zwolle''' vie'j op [[Zwolle (deurverwiesziede)]]}}
-{{Gemeente | hoi
+{{Gemeente |
 naam = Zwolle |
 bestaansnaam vlagge =Flag_of_Zwolle.svg |
 bestaansnaam wapen =  Coat of arms of Zwolle.svg |
