Versie 302021 van [[Special:Contributions/Woolters|Woolters]] ([[User talk:Woolters|overleg]]) weerummedreid

--- a/Uganda.mw
+++ b/Uganda.mw
@@ -1,5 +1,5 @@
 {{Laandtabel-twd
-| naaminlaandssproak = Republic of Uganda<br />Ugandeyse Reypüblyk
+| naaminlaandssproak = Republic of Uganda<br />Republik Uganda
 | vlagge =  Flag of Uganda.svg
 | vlagartikel = Vlagge van Uganda
 | woapn =Coat_of_arms_of_Uganda.svg
@@ -22,7 +22,7 @@
 | tld = ug | laandkode = UG | tel = 256 <small>(006 vanuut Tanzania en Kenia)</small>
 }}
 
-'''Uganda''' (officieel '''Republik Uganda''') is een land in [[Afrika|Oustafrika]]. Et grenst med de klokke med an [[Zuud-Soedan|Süüdsudan]] in et noorden, [[Kenia]] in et noordousten, [[Tanzania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Groute Mearen]]-strekke. Et ligt ouk in et ströymgebeed van den [[Niel|Nyl]] en hevt een [[eavenårsklimaat]].
+'''Uganda''' (officieel '''Republik Uganda''') is een land in [[Afrika|Oustafrika]]. Et grenst med de klokke med an [[Zuud-Soedan|Süüdsudan]] in et noorden, [[Kenia]] in et noordousten, [[Tanzania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Groute Mearen]]-strekke. Et ligt ouk in et ströymgebeed van den [[Niel|Nyl]] en hevt een [[eavenårsklimåt]].
 
 De inwoaners van Uganda warren [[jager-gadderaars]] töt ungevear 1700 of 2300 jår eleaden, do as [[bantu]]volker up et süden antrökken. Et land splitteden sik up [[9 oktober]] [[1962]] af van et [[Vereanigd Keuninkriek|Vereynigd Köäningryk]]. Den name hebbet se van et olde köäningryk [[Buganda]]. Dat beslöög et südelike deyl van et land, med inbegrip van de hüdige höyvdstad [[Kampala]]. Dårnöäst warren der in Uganda nog veer köäningryken: Ankole, Bunyoro-Kitara, Busoga en Togo. 
 
@@ -31,7 +31,7 @@ Nå öäre afsplitsing bröäk der nen börgeroorlog uut, wårdöär der teendus
 Uganda is nu ne republik med 77 distrikten oaver veer landsstreaken. Den hüdigen president is [[Yoweri Kaguta Museveni]], den as nå nen sesjårigen bosoorlog in [[1986]] an de macht köäm. De officiele språken sint [[Engels|engelsk]] en [[swahili]]. Et [[luganda]] is ne språke wat döär et heyle land küürd wördet. Dårnöäst gevt et noch et [[runyoro]], [[royankole]], [[rukiga]] en et [[luo]].
 
 {{begin}}
-{{Dialekt|twd}}
+{{Dialekt|twd||Nysassiske Skryvwyse}}
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Laand]]
