*Empty MediaWiki Message*

--- a/Uganda.mw
+++ b/Uganda.mw
@@ -22,7 +22,7 @@
 | tld = ug | laandkode = UG | tel = 256 <small>(006 vanuut Tanzania en Kenia)</small>
 }}
 
-'''Uganda''' (officieel '''Republik Uganda''') is een land in [[Afrika|Oustafrika]]. Et grenst med de klokke med an [[Zuud-Soedan|Süüdsudan]] in et noorden, [[Kenia]] in et noordousten, [[Tanzania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Groute Mearen]]-strekke. Et ligt ouk in et ströymgebeed van den [[Niel|Nyl]] en hevt een [[eavenårsklimåt]].
+'''Uganda''' (officieel '''Republik Uganda''') is een land in [[Afrika|Oustafrika]]. Et grenst med de klokke med an [[Zuud-Soedan|Süüdsudan]] in et noorden, [[Kenia]] in et noordousten, [[Tanzania]] in et süüdwesten, [[Rwanda]] in et süden en [[Kongo-Kinsjasa]] in et westen. Uganda ligt in de afrikaanske [[Groute Mearen]]-strekke. Et ligt ouk in et ströymgebeed van den [[Niel|Nyl]] en hevt een [[eavenårsklimaat]].
 
 De inwoaners van Uganda warren [[jager-gadderaars]] töt ungevear 1700 of 2300 jår eleaden, do as [[bantu]]volker up et süden antrökken. Et land splitteden sik up [[9 oktober]] [[1962]] af van et [[Vereanigd Keuninkriek|Vereynigd Köäningryk]]. Den name hebbet se van et olde köäningryk [[Buganda]]. Dat beslöög et südelike deyl van et land, med inbegrip van de hüdige höyvdstad [[Kampala]]. Dårnöäst warren der in Uganda nog veer köäningryken: Ankole, Bunyoro-Kitara, Busoga en Togo. 
 
