--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -68,6 +68,10 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Hoijtink, Hoitink|| adresname
 |-
+|Huinink|| adresname
+|-
+|Hunink|| adresname
+|-
 |Jasink|| adresname
 |-
 |Kaa(r)link|| adresname
