--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -70,7 +70,7 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Huinink|| adresname
 |-
-|Hunink|| adresname
+|Hunink|| adresname <ref>[https://cbgfamilienamen.nl/nfb/detail_naam.php?gba_naam=Hunink&nfd_naam=Hunink&info=analyse+en+verklaring&operator=eq&taal= Link naor verklaring, met uutgebreide informatie oaver de achtername Hunink en varianten] </ref>
 |-
 |Jasink|| adresname
 |-
