--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -70,7 +70,7 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Huinink|| adresname
 |-
-|Hunink|| adresname <ref>[https://cbgfamilienamen.nl/nfb/detail_naam.php?gba_naam=Hunink&nfd_naam=Hunink&info=analyse+en+verklaring&operator=eq&taal= Link naor verklaring, met uutgebreide informatie oaver de achtername Hunink en varianten] </ref> <ref> [https://www.cbgfamilienamen.nl/nfb/aanhangsels/hunink2.pdf Verklaring achternaam Hunink uut 't book 'Het oeroude geslacht Hunink' via CBG] </ref>
+|Hunink|| adresname, boerderieje oaveral in d'n Achterhook en Westfalen, oldste vermelding in Westfalen 930, in d'n Achterhook 1308 bie Borculo <ref>[https://cbgfamilienamen.nl/nfb/detail_naam.php?gba_naam=Hunink&nfd_naam=Hunink&info=analyse+en+verklaring&operator=eq&taal= Link naor verklaring, met uutgebreide informatie oaver de achtername Hunink en varianten] </ref> <ref> [https://www.cbgfamilienamen.nl/nfb/aanhangsels/hunink2.pdf Verklaring achternaam Hunink uut 't book 'Het oeroude geslacht Hunink' via CBG] </ref>
 |-
 |Jasink|| adresname
 |-
