--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -243,7 +243,7 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Geurts|| 't jong van Geurt
 |-
-|Goldsteen|| noar Hoeve Goltstein in [[Dalsen]] an de [[Vechte]]
+|Goldsteen|| noar ''Hoeve Goltstein'' in [[Dalsen]] an de [[Vechte]]
 |-
 |Haverkamp|| adresname
 |-
