/* Veluwe, Sallaand, Noord-Oaveriessel */

--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -267,6 +267,8 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Kuterman|| adresname ([[Ni'jlusen]])
 |-
+|Luisman|| (Noord-Oost Oaveriessel) van Duutsk ''Leusman'', uut [[Graofschop Benthem]]
+|-
 |Logtmeijer|| adresname; beroepsname ([[Kop van Oaveriessel]])
 |-
 |Lohues, Lohuis|| adresname
