--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -267,9 +267,9 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Kuterman|| adresname ([[Ni'jlusen]])
 |-
-|Lamberink|| adresname, patroniem (Sallaand, [[Hardenbarg]]) 
+|Lamberink|| adresname, patroniem (Sallaand, [[Hardenbarg (gemiente)|Gemeente Hardenbarg]]) 
 |-
-|Luisman|| (Sallaand, [[Hardenbarg]]) van Duutsk ''Leusman'', uut [[Graofschop Benthem]]
+|Luisman|| (Sallaand, [[Hardenbarg (gemiente)|Gemeente Hardenbarg]]) van Duutsk ''Leusman'', uut [[Graofschop Benthem]]
 |-
 |Logtmeijer|| adresname; beroepsname ([[Kop van Oaveriessel]])
 |-
