--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -249,6 +249,8 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Hell, van|| ofkomstig uut [[Helderbuurt]]
 |-
+|Hove, ten|| (Sallaand, Veluwe)
+|-
 |Hul, van 't|| adresname
 |-
 |Huzen|| mangs vertaald as Huizen ([[Ni'jlusen]])
