--- a/Band_(samenleaving).mw
+++ b/Band_(samenleaving).mw
@@ -1,6 +1,6 @@
-Een '''band''' of '''bandsamenleyving''' is de meyst eynvoldige wyse van samenleaven by mensken. Wat hyr körtby kümt is de [[grootfamilie|groutfamily]], [[clan|klan]] of [[sibbe]], wat besteyt uut neet meyr as 30 töt 50 man. 
+Een '''band''' of '''bandsamenleaving''' is de meyst eynvoldige wyse van samenleaven by mensken. Wat hyr körtby kümt is de [[grootfamilie|groutfamily]], [[clan|klan]] of [[sibbe]], wat besteyt üüt neet meyr as 30 töt 50 man. 
 
-Alle tyden so'n betty bint bands [[jager-verzaamlaar|jager-gadderaar]] lüde. Der is een årdige gelykheid tüsken de mensken; se hebbet geyn last van 'ledders' en as der eyne wat houcher steyt as een ander is dat mar tydelik, neet te arven.
-Et volk levt sleppend, vöärsöt sichsülven van wat se nöydig bint en hebbet nooit te vöäle. Dårümme besteyt der ouk amper-an handel en ümdat wetten en reagels neet vaste ståt, hebbet se ouk geyn behoovde an skryven. Se hebbet geyn polityke groupen en hebbet geyn vasten leider, wülk eköäsen wörd nå syn mooie dåden. Beslissings wörd ait [[demokraties|demokratisk]] of-epråt.
+Alle tyden so'n betty bint bands [[jager-verzaamlaar|jager-gadderaar]] lüde. Der is een årdige gelykheid tüsken de mensken; se hebbet geyn last van 'ledders' en as der eyne wat houger steyt as een ander is dat mar tydelik, neet te arven.
+Et volk levt sleppend, vöärsöt sichsülven van wat se nöydig bint en hebbet noit te vöäle. Dårümme besteyt der ouk amper-an handel en ümdat wetten en reagels neet vaste ståt, hebbet se ouk geyn behoovde an skryven. Se hebbet geyn polityke groupen en hebbet geyn vasten leider, wülk eköäsen wörd nå syn gode dåden. Beslissings wördet ait [[demokraties|demokratisk]] of-epråt.
 
 {{Dialekt|sdz|[[Hardenbarg|Haddenbarreg]]}}
